--- a/src/client/app/dashboard/documentation/documentation.component.html
+++ b/src/client/app/dashboard/documentation/documentation.component.html
@@ -15,6 +15,29 @@
       </div>
        <pre>{{ content }}</pre>
 
+        <div class="code-editor">
+    <pre>
+				<code class="language-javascript">
+import {{ '{' }} Resolve } from '@angular/router';
+import {{ '{' }} SignalR, SignalRConnection } from 'ng2-signalr';
+import {{ '{' }} Injectable } from '@angular/core';
+
+@Injectable()
+export class ConnectionResolver implements Resolve{{ '<' }}SignalRConnection> {{ '{' }}
+
+    constructor(private _signalR: SignalR)  {{ '{' }}
+
+     resolve() {{ '{' }}
+        console.log('HomeRouteResolver. Resolving...');
+        return this._signalR.connect();
+    }
+
+}
+
+
+
+</code></pre>
+  </div>
 
       <!-- /.card-header -->
 
