added unit test to dev setup

--- a/src/client/app/dashboard/dev-setup/dev-setup.component.html
+++ b/src/client/app/dashboard/dev-setup/dev-setup.component.html
@@ -9,6 +9,8 @@
                 <tab heading="route.ts" (select)="showRouteCode()"></tab>
                 <tab heading="chat.component.ts" (select)="showChatComponentCode()"></tab>
                 <tab heading="hub.cs" (select)="showServerCode()"></tab>
+                <tab heading="page.spec.ts" (select)="showUnitTestCode()"></tab>
+                <tab heading="activated.route.mock.ts" (select)="showRouteMockCode()"></tab>
               </tabset>
             </div>
             <div class="code-editor">
